--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 								<h2 class="minor">Tremor Mechanisms and Conceptual Model for Pavlof Volcano, Alaska</h2>
 								<p>Pavlof Volcano, a stratovolcano located in the the Alaska Peninsula, is one of the most frequently active volcanoes in North America with more than 40 confirmed eruptions since observations began in the early 1800s. Despite its eruption frequency, Pavlof is known to be a challenging volcano to monitor, owing to its relative lack of anomalous seismic rates prior to its eruptions, short eruption run-up times, and variability in eruption explosivity. Pavlof Volcano primarily exhibits seismic tremor, which we detect and model in this work currently under review at the Journal of Volcanology and Geothermal Research.</a></p>
 								<span class="image main"><img src="images/fig6_tremor_cartoon_v2.png” alt="" /></span>
-								Fig. 1 Cartoon illustrating proposed tremor model scenarios for Pavlof Volcano. a) Tremor model scenario controlled by gas flow and the existence of a gas pocket trapped under a permeable cap, following harmonic and monochromatic tremor inferences from <a href="https://doi.org/10.1029/2019JB017482">Girona et al. (2019)</a> and the broadband tremor model of <a href="https://doi.org/10.1029/2019JB018980">Gestrich et al. (2020)</a>. b) Tremor model scenario controlled by the position of the magma front, where the Dirac Comb effect produced by periodic LP occurrences and the resonance of a one-dimensional oscillator explain harmonic and monochromatic tremor. Similar to a), the broadband tremor model of <a href="https://doi.org/10.1029/2019JB018980">Gestrich et al. (2020)</a> is preferred. c--f) Selected examples of broadband tremor, stable harmonic tremor, gliding harmonic tremor, and monochromatic tremor from Pavlof Volcano’s 2021–22 eruption.</p>
+								Fig. 1 Cartoon illustrating proposed tremor model scenarios for Pavlof Volcano. a) Tremor model scenario controlled by gas flow and the existence of a gas pocket trapped under a permeable cap, following harmonic and monochromatic tremor inferences from <a href="https://doi.org/10.1029/2019JB017482">Girona et al. (2019)</a> and the broadband tremor model of <a href="https://doi.org/10.1029/2019JB018980">Gestrich et al. (2020)</a>. b) Tremor model scenario controlled by the position of the magma front, where the Dirac Comb effect produced by periodic LP occurrences and the resonance of a one-dimensional oscillator explain harmonic and monochromatic tremor. Similar to a), the broadband tremor model of <a href="https://doi.org/10.1029/2019JB018980">Gestrich et al. (2020)</a> is preferred. c-f) Selected examples of broadband tremor, stable harmonic tremor, gliding harmonic tremor, and monochromatic tremor from Pavlof Volcano’s 2021–22 eruption.</p>
 								<span class="image main"><img src="images/fig10_conceptual_model.png” alt="" /></span>
-								Conceptual model of Pavlof’s shallow plumbing system. We propose the presence of a shallow T-junction located a few hundred meters beneath the edifice, linking the summit vent and southeast flank vents. This bifurcated conduit system likely governs the shallow partitioning of exsolved volatiles and accommodates our proposed tremor-generating mechanisms. a) Southeast flank eruptions (e.g., 2007, 2021--2022) involve slowly ascending, gas-poor magma. Due to the slow rise of magma, precursory unrest signals are detected, and the angled conduit branch directs the magma towards the southeast flank vent. b) Summit vent eruptions (e.g., 2013, 2014, 2016) are driven by gas-rich magma that ascends and fragments rapidly, erupting directly upward and bypassing the angled conduit branch. These intense eruptions occur with little to no precursors and are marked by abrupt increases (and decreases) in seismic amplitudes.</p>
+								Conceptual model of Pavlof’s shallow plumbing system. We propose the presence of a shallow T-junction located a few hundred meters beneath the edifice, linking the summit vent and southeast flank vents. This bifurcated conduit system likely governs the shallow partitioning of exsolved volatiles and accommodates our proposed tremor-generating mechanisms. a) Southeast flank eruptions (e.g., 2007, 2021-2022) involve slowly ascending, gas-poor magma. Due to the slow rise of magma, precursory unrest signals are detected, and the angled conduit branch directs the magma towards the southeast flank vent. b) Summit vent eruptions (e.g., 2013, 2014, 2016) are driven by gas-rich magma that ascends and fragments rapidly, erupting directly upward and bypassing the angled conduit branch. These intense eruptions occur with little to no precursors and are marked by abrupt increases (and decreases) in seismic amplitudes.</p>
 								<p>A link to our manuscript will be added here upon successful journal review and publication.</a></p>
 
 								<h2 class="minor">Volcanic Tremor Detection using Machine Learning</h2>
@@ -96,15 +96,18 @@
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<h2 class="minor">Education</h2>
-								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics specializing in volcano seismology, infrasound and machine learning</p>
+								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - August 2025<br>PhD in Solid Earth Geophysics (Volcano Seismoacoustics & Machine Learning):<i>Toward Multidisciplinary Volcanic Eruption Models and Forecasts in Alaska: Contributions from Automated Seismic and Acoustic Signal Detection and Characterization</i> (<a href="https://www.proquest.com/docview/3240423416?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses">link</a>)<br></p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science; First Class Honors; GPA 4.68 / 5.00</p>
 								<p></p>
 								<h2 class="minor">Published Manuscripts & Reports</h2>
+								<p>Fee, D., <b>Tan, D.</b>, Lyons, J., Sciotto, M., Cannata, A., Hotovec-Ellis, A., Girona, T., Wech, A., Roman, D., Haney, M. and De Angelis, S. (2025). A generalized deep learning model to detect and classify volcano seismicity. Volcanica, 8(1), 305-323. <a href="https://doi.org/10.30909/vol/rjss1878">doi: 10.30909/vol/rjss1878</a></p>
+								<p>Lyons, J. J., Tan, D., Angarita, M., Loewen, M. W., Lopez, T., Grapenthin, R., Hotovec-Ellis, A., Fee, D. & Haney, M. (2025). Identifying precursors and tracking pulses of magma ascent in multidisciplinary data during the 2018–2023 phreatomagmatic eruption at Semisopochnoi Island, Alaska. Journal of Volcanology and Geothermal Research, 463, 108329. <a href="https://doi.org/10.1016/j.jvolgeores.2025.108329">doi: 10.1016/j.jvolgeores.2025.108329</a></p>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and characterization of seismic and acoustic signals at Pavlof Volcano, Alaska, using deep learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
 								<p>Orr, T.R., Dietterich, H.R., Fee D., Girona, T., Grapenthin, R., Haney, M.M., Loewen, M.W., Lyons, J.J., Power, J.A., Schwaiger, H.F., Schneider, D.J., <b>Tan, D.</b>, Toney, L., Wasser, V.K., Waythomas, C.F., 2024, 2021 Volcanic activity in Alaska and the Commonwealth of the Northern Mariana Islands—Summary of events and response of the Alaska Volcano Observatory: U.S. Geological Survey Scientific Investigations Report 2024–5014, 64 p. <a href="https://doi.org/10.3133/sir20245014">doi: 10.3133/sir20245014</a></p>
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A., & Girona, T. (2023). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Frontiers in Earth Science, 11, 1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
 								<p>Grapenthin, R., Cheng, Y., Angarita, M., <b>Tan, D.</b>, Meyer, F. J., Fee, D., & Wech, A. (2022). Return from dormancy: rapid inflation and seismic unrest driven by transcrustal magma transfer at Mt. Edgecumbe (L’úx Shaa) Volcano, Alaska. Geophysical Research Letters, 49(20), e2022GL099464. <a href="https://doi.org/10.1029/2022GL099464">doi: 10.1029/2022GL099464</a></p> 
 								<h2 class="minor">Conference Presentations</h2>
+								<p><b>Tan, D.</b>, Fee, D., Izbekov, P., Lopez, T., Girona, T., Burgos, V., McNutt, S., Haney, M., Wasser, V., Larsen, J., Grapenthin, R., Angarita, M., Saunders-Shultz, P., Shreve, T. & Moshrefzadeh, J. (2025) Unraveling Pavlof Volcano's Shallow Plumbing System: Insights from Seismoacoustic and Multidisciplinary Analyses. Abstract 1.5.4, presented at the 2025 IAVCEI Scientific Assembly, Geneva, Switzerland. (Talk)</p>
 								<p><b>Tan, D.</b>, Fee, D., Burgos, V., Lopez, T., Haney, M., Waythomas, C., McNutt, S., Girona, T., Izbekov, P., Larsen, J., Wasser, V., Shreve, T., Moshrefzadeh, J., Grapenthin, R., Angarita, M. & Saunders-Shultz, P. (2024). A multidisciplinary investigation of vent-specific unrest at Pavlof Volcano, Alaska (2004-2024). Abstract V51A-01, presented at 2024 AGU Fall Meeting, Washington D.C., USA. (Talk)</p>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024).  Investigation of tremor and explosion sequences from Pavlof Volcano, Alaska using deep learning. Abstract presented at 2024 SSA Annual Meeting, Anchorage, AK, USA. (Invited Talk)</p>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., & Wech, A. (2023).  Volcano seismic and acoustic tremor regimes at Pavlof Volcano, Alaska revealed by machine learning. Abstract V14B-01, presented at 2023 AGU Fall Meeting, San Francisco, CA, USA. (Talk)</p>
@@ -121,6 +124,8 @@
 								<p><b>ES2001 - Computational Earth Systems Science</b> | NTU | Fall 2018<br/>
 								Teaching Assistant</p>
 								<h2 class="minor">Awards</h2>
+								<p><b>International Postdoctoral Fellowship (2025)</b><br />
+								<i>conferred by Nanyang Technological University</i></p>
 								<p><b>Outstanding Student Performance Award (2024)</b><br />
 								<i>conferred by the Geophysical Institute, University of Alaska Fairbanks</i></p>
 								<p><b>Alaska Geological Society Scholarship (2022)</b><br />
@@ -142,7 +147,7 @@
 								<h2 class="minor">University Service</h2>
 								<p><b>Graduate Student Representative</b><br />
 								UAF R1 Research Steering Committee<br />
-								<i>Jul 2023 - current</i></p>
+								<i>Jul 2023 - Jun 2025</i></p>
 								<p><b>Graduate Student Representative</b><br />
 								UAF International Collaboration & Enrollment Task Force (ICE)<br />
 								<i>Jan 2023 - Jun 2023</i></p>
@@ -444,6 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
