--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/darren_bg.jpg" alt="" /></span>
-								<p>Welcome to my website! My name is Darren Tan (Chinese: 陈培堃) and I am a Geophysics PhD candidate at UAF. My work is focused on volcano seismology and infrasound, where I look at wiggles to try to uncover how seismic and acoustic signals tie in with volcanic unrest. I am particularly interested in using rigorous algorithms (e.g. machine learning) to mine continuous data for previously-undetected signals, in order to construct and present a complete geophysical picture of any eruption-of-interest.</p>
-								<p>As I was born and raised in Singapore, I spent most of my life in a place with no volcanoes and minimal earthquakes. Many people wonder how I ended up studying volcanoes and their associated hazards — honestly, I simply followed my gut after being drawn in by vivid pictures of volcanoes in my middle school geography textbook. Today, I continue to be awed by the scale and unknowns of our geologically-active world, and I look forward to contributing to the wave of 21st century geoscientists.</p>
-								<p>In the long run, I hope to educate populations at risk about volcanic hazards and inspire future volcanologists to be daring and imaginative thinkers. I hope to better inform people of volcanic hazards and in turn, provide them with the same peace of mind I grew up with in volcano-free Singapore.</p>
-								<p>Outside of work, I am an avid hip-hop dancer for over 12 years! I enjoy listening to fresh tracks and exploring movement to different rhythms and beats. I’ve taught dance and performed shows in both Singapore and Fairbanks, Alaska. Perhaps one day we can share a dance on top of a volcano of your choice.</p>
+								<span class="image main"><img src="images/option3.JPG" alt="" /></span>
+								<p>Welcome! My name is Darren Tan (Chinese: 陈培堃), and I am currently a visiting postdoctoral scholar at the Earthquake Research Institute, University of Tokyo, Japan. My research focus lies in <b>volcano seismoacoustics</b> , where I look at wiggles to try to uncover how ground motion and atmospheric pertubations relate to volcanic unrest. I’m especially interested in applying rigorous methods (e.g., machine learning, coherence analysis) to detect elusive signals and locate them, building a more complete geophysical picture of eruptions.</p>
+								<p>As I was born and raised in Singapore — a place with no volcanoes and minimal earthquakes — people often ask how I ended up studying volcanic hazards. Honestly, I simply followed my gut after being captivated by the vivid volcano illustrations in my middle school geography textbook. To this day, I remain inspired by the scale and mystery of our geologically active planet, and I’m proud to be part of a growing wave of 21st-century geoscientists.</p>
+								<p>As a scientist, my goal is to improve eruption forecasting and rapid characterization of volcanic hazards. I also aspire to educate and inspire future volcanologists to be bold, imaginative thinkers — the Earth sciences are about thinking beyond geopolitical boundaries and human timescales after all! I hope that through my work, I can contribute to better volcanic hazard communication, offering others the same peace of mind I had growing up in volcano-free Singapore.</p>
+								<p>Outside of science, I’ve been an avid hip-hop dancer for over 13 years! I enjoy listening to fresh <i>acoustic</i> tracks and exploring movement through different <i>seismic</i> rhythms and beats. I’ve taught dance and performed shows in both Singapore and Fairbanks, Alaska. Perhaps one day we can share a dance on top of a volcano of your choice.</p>
 								
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p><b>Email:</b> ptan[a]alaska.edu<br />
+								<p><b>Email:</b> darren.tanpk[a]ntu.edu.sg<br />
 								<b>Github:</b> <a href="https://github.com/darren-tpk">https://github.com/darren-tpk</a></p>
-								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
+								<span class="image main"><img src="images/field_photo2.JPG" alt="" /></span>
 							</article>
 							</article>
 
@@ -449,6 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
