--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<h2 class="minor">Education</h2>
-								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - August 2025<br>PhD in Solid Earth Geophysics (Volcano Seismoacoustics & Machine Learning):<i>Toward Multidisciplinary Volcanic Eruption Models and Forecasts in Alaska: Contributions from Automated Seismic and Acoustic Signal Detection and Characterization</i> (<a href="https://www.proquest.com/docview/3240423416?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses">link</a>)<br></p>
+								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - August 2025<br>PhD in Solid Earth Geophysics (Volcano Seismoacoustics & Machine Learning):<br>
+								Thesis: <i>Toward Multidisciplinary Volcanic Eruption Models and Forecasts in Alaska: Contributions from Automated Seismic and Acoustic Signal Detection and Characterization</i> (<a href="https://www.proquest.com/docview/3240423416?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses">link</a>)<br></p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science; First Class Honors; GPA 4.68 / 5.00</p>
 								<p></p>
 								<h2 class="minor">Published Manuscripts & Reports</h2>
@@ -449,6 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
