--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 								<h2 class="major">CV</h2>
 								<h2 class="minor">Education</h2>
 								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - August 2025<br>PhD in Solid Earth Geophysics (Volcano Seismoacoustics & Machine Learning):<br>
-								Thesis: <i>Toward Multidisciplinary Volcanic Eruption Models and Forecasts in Alaska: Contributions from Automated Seismic and Acoustic Signal Detection and Characterization</i> (<a href="https://www.proquest.com/docview/3240423416?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses">link</a>)<br></p>
+								<i>Toward Multidisciplinary Volcanic Eruption Models and Forecasts in Alaska: Contributions from Automated Seismic and Acoustic Signal Detection and Characterization</i> (<a href="https://www.proquest.com/docview/3240423416?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses">link</a>)<br></p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science; First Class Honors; GPA 4.68 / 5.00</p>
 								<p></p>
 								<h2 class="minor">Published Manuscripts & Reports</h2>
 								<p>Fee, D., <b>Tan, D.</b>, Lyons, J., Sciotto, M., Cannata, A., Hotovec-Ellis, A., Girona, T., Wech, A., Roman, D., Haney, M. and De Angelis, S. (2025). A generalized deep learning model to detect and classify volcano seismicity. Volcanica, 8(1), 305-323. <a href="https://doi.org/10.30909/vol/rjss1878">doi: 10.30909/vol/rjss1878</a></p>
-								<p>Lyons, J. J., Tan, D., Angarita, M., Loewen, M. W., Lopez, T., Grapenthin, R., Hotovec-Ellis, A., Fee, D. & Haney, M. (2025). Identifying precursors and tracking pulses of magma ascent in multidisciplinary data during the 2018–2023 phreatomagmatic eruption at Semisopochnoi Island, Alaska. Journal of Volcanology and Geothermal Research, 463, 108329. <a href="https://doi.org/10.1016/j.jvolgeores.2025.108329">doi: 10.1016/j.jvolgeores.2025.108329</a></p>
+								<p>Lyons, J. J., <b>Tan, D.</b>, Angarita, M., Loewen, M. W., Lopez, T., Grapenthin, R., Hotovec-Ellis, A., Fee, D. & Haney, M. (2025). Identifying precursors and tracking pulses of magma ascent in multidisciplinary data during the 2018–2023 phreatomagmatic eruption at Semisopochnoi Island, Alaska. Journal of Volcanology and Geothermal Research, 463, 108329. <a href="https://doi.org/10.1016/j.jvolgeores.2025.108329">doi: 10.1016/j.jvolgeores.2025.108329</a></p>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and characterization of seismic and acoustic signals at Pavlof Volcano, Alaska, using deep learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
 								<p>Orr, T.R., Dietterich, H.R., Fee D., Girona, T., Grapenthin, R., Haney, M.M., Loewen, M.W., Lyons, J.J., Power, J.A., Schwaiger, H.F., Schneider, D.J., <b>Tan, D.</b>, Toney, L., Wasser, V.K., Waythomas, C.F., 2024, 2021 Volcanic activity in Alaska and the Commonwealth of the Northern Mariana Islands—Summary of events and response of the Alaska Volcano Observatory: U.S. Geological Survey Scientific Investigations Report 2024–5014, 64 p. <a href="https://doi.org/10.3133/sir20245014">doi: 10.3133/sir20245014</a></p>
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A., & Girona, T. (2023). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Frontiers in Earth Science, 11, 1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
@@ -450,6 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
