fix scholar to fellow

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>Darren Tan</h1>
 								<p>Ph.D. in volcano seismoacoustics & machine learning (<a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>, 2025)<br />
-								I am a visiting postdoctoral scholar at the <a href="https://www.eri.u-tokyo.ac.jp/en/">Earthquake Research Institute</a>, the <a href="https://www.u-tokyo.ac.jp/en/">University of Tokyo</a>, Japan.<br />
+								I am a visiting postdoctoral fellow at the <a href="https://www.eri.u-tokyo.ac.jp/en/">Earthquake Research Institute</a>, the <a href="https://www.u-tokyo.ac.jp/en/">University of Tokyo</a>, Japan.<br />
 								I am affiliated with the <a href="https://www.ntu.edu.sg/ase">Asian School of the Environment</a>, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a>, Singapore.<br /></p>
 							</div>
 						</div>
@@ -171,7 +171,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/option3.JPG" alt="" /></span>
-								<p>Welcome! My name is Darren Tan (Chinese: 陈培堃), and I am currently a visiting postdoctoral scholar at the Earthquake Research Institute, University of Tokyo, Japan. My research focus lies in <b>volcano seismoacoustics</b> , where I look at wiggles to try to uncover how ground motion and atmospheric pertubations relate to volcanic unrest. I’m especially interested in applying rigorous methods (e.g., machine learning, coherence analysis) to detect elusive signals and locate them, building a more complete geophysical picture of eruptions.</p>
+								<p>Welcome! My name is Darren Tan (Chinese: 陈培堃), and I am currently a visiting postdoctoral fellow at the Earthquake Research Institute, University of Tokyo, Japan. My research focus lies in <b>volcano seismoacoustics</b> , where I look at wiggles to try to uncover how ground motion and atmospheric pertubations relate to volcanic unrest. I’m especially interested in applying rigorous methods (e.g., machine learning, coherence analysis) to detect elusive signals and locate them, building a more complete geophysical picture of eruptions.</p>
 								<p>As I was born and raised in Singapore — a place with no volcanoes and minimal earthquakes — people often ask how I ended up studying volcanic hazards. Honestly, I simply followed my gut after being captivated by the vivid volcano illustrations in my middle school geography textbook. To this day, I remain inspired by the scale and mystery of our geologically active planet, and I’m proud to be part of a growing wave of 21st-century geoscientists.</p>
 								<p>As a scientist, my goal is to improve eruption forecasting and rapid characterization of volcanic hazards. I also aspire to educate and inspire future volcanologists to be bold, imaginative thinkers — the Earth sciences are about thinking beyond geopolitical boundaries and human timescales after all! I hope that through my work, I can contribute to better volcanic hazard communication, offering others the same peace of mind I had growing up in volcano-free Singapore.</p>
 								<p>Outside of science, I’ve been an avid hip-hop dancer for over 13 years! I enjoy listening to fresh <i>acoustic</i> tracks and exploring movement through different <i>seismic</i> rhythms and beats. I’ve taught dance and performed shows in both Singapore and Fairbanks, Alaska. Perhaps one day we can share a dance on top of a volcano of your choice.</p>
@@ -450,6 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
