--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Darren Tan</h1>
-								<p>Ph.D. in volcano seismoacoustics & machine learning (<a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>, 2025)<br />
+								<p>PhD in volcano seismology & acoustics (<a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>, 2025)<br />
 								I am a visiting postdoctoral fellow at the <a href="https://www.eri.u-tokyo.ac.jp/en/">Earthquake Research Institute</a>, the <a href="https://www.u-tokyo.ac.jp/en/">University of Tokyo</a>, Japan.<br />
 								I am affiliated with the <a href="https://www.ntu.edu.sg/ase">Asian School of the Environment</a>, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a>, Singapore.<br /></p>
 							</div>
@@ -450,6 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
