update title again

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Darren Tan</h1>
-								<p>PhD in volcano seismology & acoustics (<a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>, 2025)<br />
-								I am a visiting postdoctoral fellow at the <a href="https://www.eri.u-tokyo.ac.jp/en/">Earthquake Research Institute</a>, the <a href="https://www.u-tokyo.ac.jp/en/">University of Tokyo</a>, Japan.<br />
-								I am affiliated with the <a href="https://www.ntu.edu.sg/ase">Asian School of the Environment</a>, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a>, Singapore.<br /></p>
+								<p>Ph.D. in volcano seismology & acoustics (<a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>, 2025)<br />
+								Visiting postdoctoral fellow at the <a href="https://www.eri.u-tokyo.ac.jp/en/">Earthquake Research Institute</a>, the <a href="https://www.u-tokyo.ac.jp/en/">University of Tokyo</a>, Japan.<br />
+								Affiliated with the <a href="https://www.ntu.edu.sg/ase">Asian School of the Environment</a>, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a>, Singapore.<br /></p>
 							</div>
 						</div>
 						<nav>
@@ -96,7 +96,7 @@
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<h2 class="minor">Education</h2>
-								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - August 2025<br>PhD in Solid Earth Geophysics (Volcano Seismoacoustics & Machine Learning):<br>
+								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - August 2025<br>PhD in Solid Earth Geophysics (Volcano Seismology & Acoustics):<br>
 								<i>Toward Multidisciplinary Volcanic Eruption Models and Forecasts in Alaska: Contributions from Automated Seismic and Acoustic Signal Detection and Characterization</i> (<a href="https://www.proquest.com/docview/3240423416?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses">link</a>)<br></p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science; First Class Honors; GPA 4.68 / 5.00</p>
 								<p></p>
@@ -450,6 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
