--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Darren Tan 陈培堃</h1>
+								<h1>Darren Tan</h1>
 								<p>Ph.D. in volcano seismology & acoustics (<a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>, 2025)<br />
 								Visiting postdoctoral fellow at the <a href="https://www.eri.u-tokyo.ac.jp/en/">Earthquake Research Institute</a>, the <a href="https://www.u-tokyo.ac.jp/en/">University of Tokyo</a>, Japan.<br />
 								Affiliated with the <a href="https://www.ntu.edu.sg/ase">Asian School of the Environment</a>, <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a>, Singapore.<br /></p>
@@ -54,8 +54,8 @@
 								Fig 1. Cartoon illustrating proposed tremor model scenarios for Pavlof Volcano. a) Tremor model scenario controlled by gas flow and the existence of a gas pocket trapped under a permeable cap, following harmonic and monochromatic tremor inferences from <a href="https://doi.org/10.1029/2019JB017482">Girona et al. (2019)</a> and the broadband tremor model of <a href="https://doi.org/10.1029/2019JB018980">Gestrich et al. (2020)</a>. b) Tremor model scenario controlled by the position of the magma front, where the Dirac Comb effect produced by periodic LP occurrences and the resonance of a one-dimensional oscillator explain harmonic and monochromatic tremor. Similar to a), the broadband tremor model of <a href="https://doi.org/10.1029/2019JB018980">Gestrich et al. (2020)</a> is preferred. c-f) Selected examples of broadband tremor, stable harmonic tremor, gliding harmonic tremor, and monochromatic tremor from Pavlof Volcano’s 2021–22 eruption.</p>
 								<span class="image main"><img src="images/fig10_conceptual_model.png" alt="" /></span>
 								Fig 2. Conceptual model of Pavlof’s shallow plumbing system. We propose the presence of a shallow T-junction located a few hundred meters beneath the edifice, linking the summit vent and southeast flank vents. This bifurcated conduit system likely governs the shallow partitioning of exsolved volatiles and accommodates our proposed tremor-generating mechanisms. a) Southeast flank eruptions (e.g., 2007, 2021-2022) involve slowly ascending, gas-poor magma. Due to the slow rise of magma, precursory unrest signals are detected, and the angled conduit branch directs the magma towards the southeast flank vent. b) Summit vent eruptions (e.g., 2013, 2014, 2016) are driven by gas-rich magma that ascends and fragments rapidly, erupting directly upward and bypassing the angled conduit branch. These intense eruptions occur with little to no precursors and are marked by abrupt increases (and decreases) in seismic amplitudes.</p>
-								<p>A link to our manuscript will be added here upon successful journal review and publication.</a></p>
-
+								<p>For more information, refer to our published manuscript at <a href="https://doi.org/10.1016/j.jvolgeores.2025.108465">doi: 10.1016/j.jvolgeores.2025.108465</a></p>
+								
 								<h2 class="minor">Volcanic Tremor Detection using Machine Learning</h2>
 								<p>Volcanic tremor is a semi-continuous seismic and/or acoustic signal that is challenging to detect reliably due to its highly variable amplitudes, durations and spectral features. Machine learning offers a fast, robust and automated method to detect and characterize tremor in high temporal resolution for volcano monitoring and research purposes. We construct a labeled dataset and train a pair of station-generic Convolutional Neural Networks (one for seismic, one for infrasound) to identify different types of tremor and impulsive signals across the 2021-2022 eruption of Pavlof volcano, Alaska.</a></p>
 								<span class="image main"><img src="images/tremor_classes.png" alt="" /></span>
@@ -79,6 +79,7 @@
 								<span class="image main"><img src="images/mammoth_btm.png" alt="" /></span>
 								Fig 8. Hypocenter plots produced from our workflow for the 2012-2013 deep swarm sequence in Mammoth Mountain, California (top and bottom left, with cross-sections A-B and C-D). The cross sections are compared with the results published in <a href="https://doi.org/10.1126/sciadv.aat5258">Hotovec-Ellis et al. (2018)</a> (bottom right, cross-sections A-A' and B-B'). Red arrows illustrate macroscopic similarities in the migration of high frequency events.</p>
 								<p>We have implemented our workflow on Redoubt and Augustine, two Alaska volcanoes which were shortlisted in the <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a> as well. For more information, refer to our published manuscript at <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p>
+								<p>For more information, refer to our published manuscript at <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p>
 								
 								<h2 class="minor">Cumulative Moment Magnitude vs Repose Time</h2>
 								<p>Analysing earthquakes induced by volcanic activity is critical for eruption forecasting as they shed light on magma movement underneath the volcano’s edifice. In previous work by <a href="https://doi.org/10.1029/2010GL044194">Thelen et al. (2010)</a>, the relationship between repose time of eruptions and cumulative moment magnitude of precursor seismicity was studied across 5 stratovolcanoes (Fig 7). These two parameters demonstrated a potentially linear trend in log-log space, and it was proposed that the continual growth of volcanic plugs over longer repose times creates increasingly competent conduit features which impede magma ascent. Overcoming the obstructions to magma ascent would involve greater seismicity and hence a higher CMM.
@@ -101,6 +102,7 @@
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science; First Class Honors; GPA 4.68 / 5.00</p>
 								<p></p>
 								<h2 class="minor">Published Manuscripts & Reports</h2>
+								<p><b>Tan, D.</b>, Fee, D., Izbekov, P., Lopez, T., Girona, T., Burgos, V., McNutt, S., Haney, M., Wasser, V., Larsen, J., Grapenthin, R., Angarita, M., Saunders-Shultz, P., Shreve, T., & Moshrefzadeh, J. (2025). Vent-specific unrest at Pavlof Volcano, Alaska: Insights from multidisciplinary data. Journal of Volcanology and Geothermal Research, 108465. <a href="https://doi.org/10.1016/j.jvolgeores.2025.108465">doi: 10.1016/j.jvolgeores.2025.108465</a></p> 
 								<p>Fee, D., <b>Tan, D.</b>, Lyons, J., Sciotto, M., Cannata, A., Hotovec-Ellis, A., Girona, T., Wech, A., Roman, D., Haney, M. and De Angelis, S. (2025). A generalized deep learning model to detect and classify volcano seismicity. Volcanica, 8(1), 305-323. <a href="https://doi.org/10.30909/vol/rjss1878">doi: 10.30909/vol/rjss1878</a></p>
 								<p>Lyons, J. J., <b>Tan, D.</b>, Angarita, M., Loewen, M. W., Lopez, T., Grapenthin, R., Hotovec-Ellis, A., Fee, D. & Haney, M. (2025). Identifying precursors and tracking pulses of magma ascent in multidisciplinary data during the 2018–2023 phreatomagmatic eruption at Semisopochnoi Island, Alaska. Journal of Volcanology and Geothermal Research, 463, 108329. <a href="https://doi.org/10.1016/j.jvolgeores.2025.108329">doi: 10.1016/j.jvolgeores.2025.108329</a></p>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and characterization of seismic and acoustic signals at Pavlof Volcano, Alaska, using deep learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
@@ -450,6 +452,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
