--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 								<h2 class="minor">Awards</h2>
 								<p><b>International Postdoctoral Fellowship (2025)</b><br />
 								<i>conferred by Nanyang Technological University</i></p>
+								<p><b>Outstanding Student Presentation Award (2024)</b><br />
+								<i>conferred by the 2024 AGU Fall Meeting (Volcanology, Geochemistry and Petrology Section)</i></p>
 								<p><b>Outstanding Student Performance Award (2024)</b><br />
 								<i>conferred by the Geophysical Institute, University of Alaska Fairbanks</i></p>
 								<p><b>Alaska Geological Society Scholarship (2022)</b><br />
@@ -451,6 +453,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
